Bug 136429 - Field "Width of numbering" in list style tab 'Position' is wrongly restricted
Summary: Field "Width of numbering" in list style tab 'Position' is wrongly restricted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-03 11:44 UTC by Regina Henschel
Modified: 2022-04-26 07:41 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Document to see problem with restricted label box width (30.92 KB, application/vnd.oasis.opendocument.text)
2020-09-03 11:44 UTC, Regina Henschel
Details
working (1.83 MB, video/mp4)
2020-09-03 19:52 UTC, BogdanB
Details
File with corrected width (31.14 KB, application/vnd.oasis.opendocument.text)
2020-09-03 20:22 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-09-03 11:44:14 UTC
Created attachment 165081 [details]
Document to see problem with restricted label box width

Open the attached document. It is the specification of ODF 1.2, where I have removed most of the content. Go to chapter Appendix.
The headings are formatted with list style 'Appendix'.

The second line of a heading should be aligned with the content text of the first line. That means, that content text has to start after the label. Try to change the list style 'Appendix' so that this is achieved.

For that purpose you would need to change the value in field "Width of numbering" in tab "Position" to about "40mm". But that is not possible, because the field is restricted to "20mm".

If you set "40mm" directly in the file source and then open the document, you can see, that LibreOffice has no problem in using "40mm". It is only the UI, that restricts the input.

Request: Remove the restriction in die Numbering dialog. Or at least set it to a much higher limit. Keep in mind, that the needed space depends on paper format and font size too.
Comment 1 BogdanB 2020-09-03 19:51:57 UTC
I succeded to change from 40mm to zero.
And now looks ok. See the video.

Maybe just on windows.

Version: 7.0.1.2
Build ID: 7cbcfc562f6eb6708b5ff7d7397325de9e764452
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 2 BogdanB 2020-09-03 19:52:11 UTC
Created attachment 165119 [details]
working
Comment 3 Regina Henschel 2020-09-03 20:22:32 UTC
Created attachment 165120 [details]
File with corrected width

No, that is not the desired look. The heading text of the second line must not be under the label but has to start at the same position as the text in the first line.

The attached file shows, which formatting is desired.
Comment 4 BogdanB 2020-09-03 20:31:37 UTC
I changed to "mm" in Measurement unit, and now I can confirm it.

Please try with inch. Will be working

Aslo I tried with "cm" and it is working.

I thnik this bug is just for "mm" case.
Comment 5 Regina Henschel 2020-09-03 20:33:07 UTC
Yes, I just discovered the same. So the problem is, that the field restricts the input to the value 20, but it doesn't consider the unit.
Comment 6 Regina Henschel 2020-09-03 20:40:00 UTC
For unit "Point" it is bad as well.
Comment 7 Julien Nabet 2022-04-23 16:21:18 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
min and max are defined in cui/uiconfig/ui/numberingpositionpage.ui:
-19.99 -> 19.99
see adjustments value at the top of the file.

Here's a patch for this:
https://gerrit.libreoffice.org/c/core/+/133348
Comment 8 Commit Notification 2022-04-25 16:20:43 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/176021427fece6363df56022b63813e93505fdc2

tdf#136429: use FieldUnit value for min/max of some fields of numbering dialog

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2022-04-25 16:21:58 UTC
Patch for 7.3 waiting for review here:
https://gerrit.libreoffice.org/c/core/+/133399
Comment 10 Commit Notification 2022-04-26 07:41:43 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/524cddada9707305e08daa9a6940a70c0539761e

tdf#136429: use FieldUnit value for min/max of some fields of numbering dialog

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.