tdf#136429: use FieldUnit value for min/max of some fields of numbering dialog

Change-Id: I01428703a7bdb2090fd145e5373c37aff0d386ac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133348
Tested-by: Jenkins
Tested-by: Julien Nabet <serval2412@yahoo.fr>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>